# ZSWatch

app/: Kconfig  prj.conf
app/src/: main.c
app/src/applications/baby_alarm/: CMakeLists.txt  Kconfig  README.md  baby_alarm_app.c  baby_alarm_app.h  baby_alarm_ui.c  baby_alarm_ui.h  sample_data.h
app/src/applications/lea_assistant/: lea_assistant_ui.c  mock_webusb.c
app/src/applications/remote_shutter/: CMakeLists.txt  Kconfig  remote_shutter_app.c  remote_shutter_ui.c  remote_shutter_ui.h
app/src/ble/: CMakeLists.txt  ble_hid.c  ble_hid.h
app/src/edge_impulse/: CMakeLists.txt  Kconfig  README.txt
app/src/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
app/src/edge_impulse/tflite-model/: tflite_learn_5_compiled.cpp  tflite_learn_5_compiled.h
